--- a/README.Rmd
+++ b/README.Rmd
@@ -13,14 +13,14 @@ knitr::opts_chunk$set(
 )
 ```
 
-# quallmer <a href="https://SeraphineM.github.io/quallmer/"><img src="man/figures/logo.png" align="right" height="138" alt="quallmer website" /></a>
+# quallmer <a href="https://quallmer.github.io/quallmer/"><img src="man/figures/logo.png" align="right" height="138" alt="quallmer website" /></a>
 
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 [![CRAN status](https://www.r-pkg.org/badges/version/quallmer)](https://CRAN.R-project.org/package=quallmer)
 [![R-CMD-check](https://github.com/SeraphineM/quallmer/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/SeraphineM/quallmer/actions/workflows/R-CMD-check.yaml)
 [![Codecov test coverage](https://codecov.io/gh/SeraphineM/quallmer/graph/badge.svg)](https://app.codecov.io/gh/SeraphineM/quallmer)
-[![pkgdown](https://img.shields.io/badge/pkgdown-site-blue)](https://SeraphineM.github.io/quallmer/)
+[![pkgdown](https://img.shields.io/badge/pkgdown-site-blue)](https://quallmer.github.io/quallmer/)
 <!-- badges: end -->
 
 The **quallmer** package is an **easy-to-use toolbox to quickly apply AI-assisted qualitative coding to large amounts of texts, images, pdfs, tabular data and other structured data.**
@@ -83,7 +83,7 @@ For an interactive Shiny application to perform manual coding, review AI-generat
 
 The package supports all LLMs currently available with the `ellmer`
 package. For authentication and usage of each of these LLMs, please refer to the
-respective [ellmer](https://ellmer.tidyverse.org/reference/index.html) documentation and see our [tutorial for setting up an OpenAI API key](https://seraphinem.github.io/quallmer/articles/pkgdown/tutorials/openai.html) or [getting started with an open-source Ollama model](https://seraphinem.github.io/quallmer/articles/pkgdown/tutorials/ollama.html).
+respective [ellmer](https://ellmer.tidyverse.org/reference/index.html) documentation and see our [tutorial for setting up an OpenAI API key](https://quallmer.github.io/quallmer/articles/pkgdown/tutorials/openai.html) or [getting started with an open-source Ollama model](https://quallmer.github.io/quallmer/articles/pkgdown/tutorials/ollama.html).
 
 ## Installation
 
@@ -97,7 +97,7 @@ pak::pak("SeraphineM/quallmer")
 
 ## Example use and tutorials
 
-To learn more about how to use the package, please refer to our [step-by-step tutorials](https://seraphinem.github.io/quallmer/articles/getting-started.html).
+To learn more about how to use the package, please refer to our [step-by-step tutorials](https://quallmer.github.io/quallmer/articles/getting-started.html).
 
 ## Acknowledgments
 
